--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -138,7 +138,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnProceed"
         android:layout_width="300dp"
         android:layout_height="54dp"
         android:layout_marginTop="64dp"
