--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/home"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home" />
+        android:title="@string/home" />
 
     <item
         android:id="@+id/Search"
         android:icon="@drawable/ic_baseline_theaters_24"
-        android:title="Search" />
+        android:title="@string/search" />
 
 <!--    <item-->
 <!--        android:id="@+id/placeholder"-->
@@ -18,16 +18,16 @@
     <item
         android:id="@+id/Profile"
         android:icon="@drawable/ic_baseline_movie_24"
-        android:title="Profile" />
+        android:title="@string/profile" />
 
     <item
         android:id="@+id/ticket"
         android:icon="@drawable/ic_baseline_airplane_ticket_24"
-        android:title="ticket" />
+        android:title="@string/ticket" />
 
     <item
         android:id="@+id/Settings"
         android:icon="@drawable/ic_baseline_settings_24"
-        android:title="Settings" />
+        android:title="@string/settings" />
 
 </menu>
