--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -6,29 +6,29 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/imageButton11"
+        android:id="@+id/ibTickets"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton10"
+        app:layout_constraintTop_toBottomOf="@+id/ibMovies"
         app:srcCompat="@drawable/movie_ticket_trimmed" />
 
     <ImageButton
-        android:id="@+id/imageButton10"
+        android:id="@+id/ibMovies"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton9"
+        app:layout_constraintTop_toBottomOf="@+id/ibTheaters"
         app:srcCompat="@drawable/movie_camera" />
 
     <ImageButton
-        android:id="@+id/imageButton9"
+        android:id="@+id/ibTheaters"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
