--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -21,7 +21,7 @@
         android:title="@string/profile" />
 
     <item
-        android:id="@+id/ticket"
+        android:id="@+id/Ticket"
         android:icon="@drawable/ic_baseline_airplane_ticket_24"
         android:title="@string/ticket" />
 
