--- a/app/src/main/res/layout/activity_main_page_v2.xml
+++ b/app/src/main/res/layout/activity_main_page_v2.xml
@@ -10,7 +10,9 @@
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerInside"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ibMovies"
         app:srcCompat="@drawable/icon_movie_ticket" />
@@ -21,7 +23,9 @@
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerInside"
+        app:layout_constraintBottom_toTopOf="@+id/ibTickets"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ibTheaters"
         app:srcCompat="@drawable/icon_camera_logo" />
@@ -32,12 +36,15 @@
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerInside"
+        app:layout_constraintBottom_toTopOf="@+id/ibMovies"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icon_theater_logo" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent">
